added hashicorp vault method

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 VAULT_URL="<VAULT_URL>"
+VAULT_USERNAME="<VAULT_USERNAME>"
+VAULT_PASSWORD="<VAULT_PASSWORD>"
 PORT=9000
 DB_URI="<DATABASE MYSQL URI>"
