--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
+VAULT_PROVIDER="azure/hashicorp, default: hashicorp"
 VAULT_URL="<VAULT_URL>"
-VAULT_USERNAME="<VAULT_USERNAME>"
-VAULT_PASSWORD="<VAULT_PASSWORD>"
+VAULT_USERNAME="<VAULT_USERNAME>" # if needed
+VAULT_PASSWORD="<VAULT_PASSWORD>" # if needed
 PORT=9000
 DB_URI="<DATABASE MYSQL URI>"
