added AWS KMS option

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-VAULT_PROVIDER="azure/hashicorp, default: hashicorp"
+VAULT_PROVIDER="azure/hashicorp/aws, default: hashicorp"
 VAULT_URL="<VAULT_URL>"
-VAULT_USERNAME="<VAULT_USERNAME>" # if needed
-VAULT_PASSWORD="<VAULT_PASSWORD>" # if needed
+VAULT_USERNAME="<VAULT_USERNAME>" # only for hashicorp
+VAULT_PASSWORD="<VAULT_PASSWORD>" # only for hashicorp
+AWS_ACCESS_KEY_ID="<AWS_ACCESS_KEY_ID>" # only for aws
+AWS_SECRET_KEY="<AWS_SECRET_KEY>"
 PORT=9000
 DB_URI="<DATABASE MYSQL URI>"
